tests/negative/PragmasYAML.juvix
module PragmasYAML;

open import Stdlib.Prelude;

{-# inline: true, unroll: 500 #-}
main : Nat;
main := 0;
